--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: March 22, 2025 --><html lang="en-us" >
+<!-- Last Published: April 10, 2025 --><html lang="en-us" >
 
 
 <head>
@@ -327,7 +327,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="Электрический пробой" />
 <meta property="og:url" content="https://example.com/" />
-<meta property="og:title" content="Электрический пробой" />
+<meta property="og:title" content="Электрический пробойй | Электрический пробой" />
 <meta property="og:description" content="A highly-customizable Hugo research group theme powered by Wowchemy website builder." /><meta property="og:image" content="https://example.com/media/icon_hu_7613a4a452ac7087.png" /><meta property="og:locale" content="en-us" />
 
   
@@ -388,7 +388,7 @@
 
 
   
-  <title>Электрический пробой</title>
+  <title>Электрический пробойй | Электрический пробой</title>
 
   
   
